src/snapshots/afrotd__parser__tests__interpreation_html_7.3.8_3.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 7.3.8.III
        </p>
    </div>
    <div class="message-body">
        <p>
            A83, ein Wide Receiver, befindet sich 10 Meter vom nächsten inneren
            Lineman entfernt. Er läuft in Richtung Spielfeldmitte. Bevor der
            Ball geworfen wird, wird er von B1, einem Linebacker, legal
            geblockt und dadurch zu Boden geworfen.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Legal, es sei denn der Block wurde unter der Gürtellinie
                ausgeführt (Regel 9.1.6).
            </p>
        </details>
    </div>
</article>
