src/snapshots/afrotd__parser__tests__interpreation_html_7.3.8_5.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 7.3.8.V
        </p>
    </div>
    <div class="message-body">
        <p>
            Bevor der Ball geworfen wird, bewegt sich der Wide Receiver A88
            vier Meter downfield, direkt vor und auf den Defender B1 zu. An
            diesem Punkt wird A88 von B1 weggedrückt, worauf dieser seine Hände
            benutzt, um B1 zu berühren.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Team A-Foul. Offense Passbehinderung, wenn der legale
                Vorwärtspass die neutrale Zone überquert. Strafe – 15 Meter vom
                Previous Spot.
            </p>
        </details>
    </div>
</article>
