src/snapshots/afrotd__parser__tests__interpreation_html_7.3.8_7.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 7.3.8.VII
        </p>
    </div>
    <div class="message-body">
        <p>
            A88, ein berechtigter Receiver, läuft eine 10-Meter-Route und biegt
            in einem 90 Grad-Winkel in Richtung Seitenlinie. Nachdem der Ball
            geworfen wurde, erreicht ihn B2 und tackelt oder blockt ihn oder
            ergreift oder zieht ihn, bevor A88 den Ball, einen fangbaren
            Vorwärtspass, berührt.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Team B-Foul. Defense Passbehinderung. Strafe – Spot of Foul und
                First Down.
            </p>
        </details>
    </div>
</article>
