src/snapshots/afrotd__parser__tests__interpreation_html_7.3.8_8.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 7.3.8.VIII
        </p>
    </div>
    <div class="message-body">
        <p>
            A80, ein Tight End, läuft 10 Meter bis in Team B’s Backfield und
            biegt danach in Richtung des Torpfostens ab. B1 befindet sich einen
            Schritt hinter und außerhalb von A80, als er ihn erreicht. Nachdem
            der legale Vorwärtspass geworfen wurde, wird A80 von B1 getackelt
            oder geblockt, ergriffen oder gezogen, als der Ball über A80’s
            ausgestreckte Hände fliegt.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Team B-Foul. Defense Passbehinderung. Strafe – First Down am
                Spot of Foul, wenn das Foul sich weni- ger als 15 Meter vom
                Previous Spot entfernt ereignet hat. 15-Meterstrafe vom
                Previous Spot und First Down, wenn sich das Foul mehr als 15
                Meter jenseits der neutralen Zone ereignet hat.
            </p>
        </details>
    </div>
</article>
