src/snapshots/afrotd__parser__tests__interpreation_html_7.3.9_2.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 7.3.9.II
        </p>
    </div>
    <div class="message-body">
        <p>
            Bei einem legalen Vorwärtspass hinter der neutralen Zone befindet
            sich der berechtigte A1 direkt neben B1. A1 ist im Begriff, den
            Pass zu berühren, als B1 A1 wegdrückt und der Pass ist
            unvollständig.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Legal. Regeln bezüglich Passbehinderung gelten nicht hinter der
                neutralen Zone (Regeln 7.3.9.d, 9.1.5 Ausnahme 4 und 9.3.5
                Ausnahme 5).
            </p>
        </details>
    </div>
</article>
