src/snapshots/afrotd__parser__tests__interpreation_html_7.3.9_3.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 7.3.9.III
        </p>
    </div>
    <div class="message-body">
        <p>
            Während A88 eine Passroute in der Nähe einer Seitenlinie läuft,
            berührt er die Seitenlinie, unmittelbar bevor ein Defense Spieler
            gegen ihn springt und den Pass zu Boden schlägt.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Keine Defense Passbehinderung. A88 wurde zu einem
                unberechtigten Spieler, als er auf die Seitenlinie trat (Regel
                7.3.3).
            </p>
        </details>
    </div>
</article>
