src/snapshots/afrotd__parser__tests__interpreation_html_8.2.1_2.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 8.2.1.II
        </p>
    </div>
    <div class="message-body">
        <p>
            Ballträger A1, der im Spielfeld läuft, springt und befindet sich an
            der B-2 in der Luft. Er berührt den Boden zuerst drei Meter
            jenseits der Goalline im Aus. Der Ball im Besitz des Spielers
            überquert einen Pylon.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Touchdown (Regeln 4.2.4.d und 5.1.3.a).
            </p>
        </details>
    </div>
</article>
