src/snapshots/afrotd__parser__tests__interpreation_html_8.2.1_6.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 8.2.1.VI
        </p>
    </div>
    <div class="message-body">
        <p>
            Ballträger A22 stürmt in Richtung des rechten Pylon auf B’s
            Goalline. von der B-2 hechtet er vorwärts oder wird von einem
            Gegner vorwärts geblockt, so dass er keinen Bodenkontakt mehr hat.
            Der Ball in A22’s rechter Hand überquert an der B-1 die Seitenlinie
            und passiert den Pylon außerhalb. Danach berührt A22 (a) den Pylon
            mit seinem Fuß oder seiner linken Hand; (b) erst drei Meter
            jenseits der Goalline den Boden im Aus.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                (a) Touchdown. Die Fläche der Goalline wird verlängert, da A22
                den Pylon berührt. (b) Kein Touchdown. Die Fläche der Goalline
                wird nicht verlängert, da A22 weder den Pylon noch den Boden in
                der Endzone berührte. Der Ball wird an der B-1 für „im Aus“
                erklärt.
            </p>
        </details>
    </div>
</article>
