src/snapshots/afrotd__parser__tests__interpreation_html_8.2.1_7.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 8.2.1.VII
        </p>
    </div>
    <div class="message-body">
        <p>
            Ballträger A22 stürmt in Richtung des rechten Pylon auf B’s
            Goalline. Der Ball in A22’s rechter Hand überquert die Verlängerung
            der Goalline außerhalb (z. B.: zur rechten) des Pylon. Danach tritt
            A22 (a) auf die Goalline oder (b) unmittelbar vor der Goalline auf
            die Seitenlinie.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                (a) Touchdown. Die Fläche der Goalline wird verlängert, da A22
                den Boden in der Endzone berührt. (b) Kein Touchdown. Die
                Fläche der Goalline wird nicht verlängert. Der Ball wird am
                Punkt der Überquerung für „im Aus“ erklärt.
            </p>
        </details>
    </div>
</article>
