src/snapshots/afrotd__parser__tests__interpreation_html_8.3.1_2.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 8.3.1.II
        </p>
    </div>
    <div class="message-body">
        <p>
            B19 ist der erste Spieler, der jenseits der neutralen Zone Team A’s
            geblockten Kick beim Try berührt, als er den fliegenden Kick in der
            Endzone mufft. A66 recovert den Ball in der Endzone.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Team A werden zwei Punkte zuerkannt.
            </p>
        </details>
    </div>
</article>
